Article tagging service feature when articles are scrapped

--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@
 
 MANDRILL_USERNAME = 'yiksurn.chong@gmail.com'
 MANDRILL_APIKEY = 'AlevJ6Fa1GCaJIs9ATmwwg'
+
+ALCHEMY_APIKEY = '66b33ad63ea2477f7df532dc413aa88799b6ecc8'
+INDICO_APIKEY = '92b8d43ddfbf702b2dcda8735b34447c'
+OPENCALAIS_APIKEY = 'LUR2L4LakIvBjZkQ4rym1KzV9T572nIv'
+# OPENCALAIS_APIKEY = 'Jn9nIcnsH1e07qFlZF0GFDERHtsG2K8a'
